@@ -7,6 +7,12 @@ the issue number to the end of the URL: https://github.com/swig/swig/issues/
 Version 4.2.0 (in progress)
 ===========================
 
+2023-05-04: erezgeva
+	    [D] #2538 Drop support for D1/Tango, which was discontinued in
+	    2012.  Wrappers for D2/Phobos are now generated by default, though
+	    the -d2 command line option is still accepted (and now ignored) for
+	    backward compatibility.
+
 2023-04-27: olly
 	    #2502 Allow using snprintf() instead of sprintf() in wrappers.
 
